--- a/assets/.gitignore
+++ b/assets/.gitignore
@@ -10,7 +10,10 @@ Thumbs.db
 
 # Specific files #
 ##################
+faviconV1.ico
+faviconV1.png
 
 # Specific folders #
 ####################
+faviconV1
 faviconV2
